@@ -10,7 +10,7 @@
 # Copyright (c) 2000 Andreas Kupries.
 # All rights reserved.
 # 
-# RCS: @(#) $Id: iogt.test,v 1.2 2000/09/28 06:38:22 hobbs Exp $
+# RCS: @(#) $Id: iogt.test,v 1.3 2001/12/17 22:55:51 andreas_kupries Exp $
 
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
@@ -512,7 +512,6 @@ query/maxRead
 read
 query/maxRead
 flush/read
-query/maxRead
 delete/read
 --------
 create/write
@@ -565,7 +564,6 @@ read {
 }
 query/maxRead {} -1
 flush/read {} {}
-query/maxRead {} -1
 delete/read {} *ignored*
 --------
 create/write {} *ignored*
@@ -624,7 +622,6 @@ write %^&*()_+-= %^&*()_+-=
 write {
 } {
 }
-query/maxRead {} -1
 delete/read {} *ignored*
 flush/write {} {}
 delete/write {} *ignored*}
